--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Vulnerable node.js account takeover lab ",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon server.js"
   },
   "keywords": [
     "nodejs",
@@ -21,6 +21,9 @@
   "author": "Samuel Amsalu - NAZU Sec",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "dotenv": "^16.3.1",
+    "ejs": "^3.1.9",
+    "express": "^4.18.2",
+    "nodemon": "^3.0.2"
   }
 }
