--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Vulnerable node.js account takeover lab ",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",	  
+    "start": "node server.js",
     "server": "nodemon server.js"
   },
   "keywords": [
@@ -25,6 +25,7 @@
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "mongoose": "^8.0.3",
     "nodemon": "^3.0.2"
   }
 }
