--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "mongoose": "^8.0.3",
+    "morgan": "^1.10.0",
     "nodemon": "^3.0.2"
   }
 }
